Se agrego mi nombre en el archivo index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Primer programa en GIT</title>
 </head>
 <body>
-    
+    <title>Jose Alejandro Ceballos Valenzuela</title>
 </body>
 </html>
